Mockを作成しなおして演習1完了
演習1完了

入力画面を作成

表示画面を作成

名前作成用コントローラー作成

create mock

--- a/src/main/resources/templates/exam01.html
+++ b/src/main/resources/templates/exam01.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
 </head>
+
 <body>
-<label for="name">名前:</label>
-<input type="text" name="" id="">
+    <form action = "finished" th:action="@{/ex01/show}" method="post">
+        <label for="name">名前:</label>
+        <input type="text" name="name" id="name">
+        <button>送信</button>
+    </form>
 </body>
+
 </html>
