--- a/src/main/resources/templates/exam03/exam03.html
+++ b/src/main/resources/templates/exam03/exam03.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
 
+<head>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
+</head>
+
+<body>
+    <form th:action="@{/exam03/calc}" method="post">
+        <label for="item1">商品1:</label>
+        <input type="text" name="item1" id="item1">
+        <label for="item2">商品2:</label>
+        <input type="text" name="item2" id="item2">
+        <label for="item3">商品3:</label>
+        <input type="text" name="item3" id="item3">
+        <button>購入</button>
+    </form>
 </body>
+
 </html>
