--- a/src/main/resources/templates/exam04/exam04-result.html
+++ b/src/main/resources/templates/exam04/exam04-result.html
@@ -5,8 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-<p>名前:<span th:text="${name}"></span></p>
-<p>年齢:<span th:text="${age}"></span></p>
-<p>コメント<pre><span th:text="${comment}"></span></pre></p>
+<p>名前:<span th:text="${user.name}"></span></p>
+<p>年齢:<span th:text="${user.age}"></span></p>
+<p>コメント<pre><span th:text="${user.comment}"></span></pre></p>
 </body>
 </html>
